--- a/sidcup-family-Golf/style.css
+++ b/sidcup-family-Golf/style.css
@@ -5,7 +5,7 @@
     font-family: 'montserrat';
     color: #fff;
 }
-
+ 
 html,body{
     height: 100%;
     width: 100%;
@@ -108,7 +108,7 @@ video{
 
 
 #page2{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     z-index: 10;
 
@@ -155,4 +155,152 @@ video{
     to{
         transform: translate(-100%);
     }
+}
+
+#about-us{
+    height: 45vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    /* background-color: red; */
+    
+    padding: 0 50px;
+}
+#about-us img{
+    height: 130px;
+    width: 130px;
+    border-radius: 20px;
+    object-fit: cover;
+}
+
+#about-is-in{
+    width: 50%;
+    text-align: center;
+}
+
+#about-is-in h3{
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 40px;
+}
+#about-is-in p{
+    font-size: 18px;
+    line-height: 26px;
+}
+
+#cards-container{
+    /* background-color: red; */
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 70px;
+    position: relative;
+    z-index: 10;
+}
+.card{
+    height: 80%;
+    width: 24%;
+    /* background-color: blue; */
+    border-radius: 20px;
+    background-size: cover;
+    background-position: center;
+    overflow: hidden;
+    transition: all ease 0.6s;
+
+}
+#card1{
+    background-image: url("https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-toptracer.jpg?strip=all&lossy=1&sharp=1&ssl=1");
+}
+#card2{
+    background-image: url('https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/hero-4.jpg?strip=all&lossy=1&sharp=1&ssl=1');
+}
+#card3{
+background-image: url('https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-lessons.jpg?strip=all&lossy=1&sharp=1&ssl=1');
+}
+
+.overlay{
+    height: 100%;
+    width: 100%;
+    background-color: #95C11E;
+    padding: 30px;
+    padding-top: 140px;
+    opacity: 0;
+    transition: all ease 0.6s;
+}
+
+.overlay h4{
+    color: #000;
+    font-size: 30px;
+    text-transform: uppercase;
+    font-weight: 800;
+    /* white-space: nowrap; */
+    margin-bottom: 20px;
+
+}
+.overlay p{
+    color: #000;
+    font-size: 18px;
+    
+}
+.card:hover .overlay{
+    opacity: 1;
+}
+.card:hover{
+    transform: rotate3d(-1,1,0,20deg);
+}
+
+#green-div{
+    height: 30vh;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(to left bottom,#119f3a, #ace022);
+}
+#green-div h4{
+    width: 40%;
+    /* color: #000; */
+    line-height: 50px;
+    text-align: center;
+    font-size: 26px;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+#green-div img{
+    height:  100%;
+    object-fit: cover;
+    width: 13%;
+}
+
+#page3{
+    height: 100vh;
+    width: 100%;
+    background-color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+#page3>p{
+    font-size:28px;
+    font-weight: 700;
+    width: 55%;
+    line-height: 45px;
+    text-align: center;
+}
+
+#page3 img{
+    position: absolute;
+    height: 60px;
+}
+
+#page3 #colon1{
+    left: 10%;
+    top: 20%;
+}
+#page3 #colon2{
+    right:  10%;
+    bottom:  20%;
 }
