--- a/sidcup-family-Golf/style.css
+++ b/sidcup-family-Golf/style.css
@@ -5,12 +5,24 @@
     font-family: 'montserrat';
     color: #fff;
 }
- 
+*::selection{
+    background-color: #fff;
+    color:#95C11E;
+}
+body::-webkit-scrollbar{
+    display: block;
+    width: 6px;
+    background-color: #95C11E;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: #fff;
+    border-radius: 10px;
+}
 html,body{
     height: 100%;
     width: 100%;
 } 
-
+ 
 #cursor{
     height: 20px;
     width: 20px;
@@ -106,6 +118,29 @@ video{
     width: 50%;
 }
 
+#page1 #arrow{
+    height: 140px;
+    width: 140px;
+    background-color: transparent;
+    color: #fff;
+    border: 2px solid #95C11E;
+    position: absolute;
+    display: flex;
+    left: -2%;
+    bottom: 0.5%;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    transition: all ease 0.5s;
+}
+#page1 #arrow i{
+    font-size: 60px;
+    font-weight: 100;
+}
+#page1 #arrow:hover{
+    scale: 0.4;
+    background-color: #95C11E;
+}
 
 #page2{
     min-height: 100vh;
@@ -208,6 +243,8 @@ video{
     background-position: center;
     overflow: hidden;
     transition: all ease 0.6s;
+    border: 2px solid red;
+    transform: (0,0,0,0deg);
 
 }
 #card1{
@@ -248,7 +285,8 @@ background-image: url('https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/0
     opacity: 1;
 }
 .card:hover{
-    transform: rotate3d(-1,1,0,20deg);
+    transform: (-1,1,0,20deg);
+    border: 2px solid orange;
 }
 
 #green-div{
@@ -304,3 +342,124 @@ background-image: url('https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/0
     right:  10%;
     bottom:  20%;
 }
+
+
+#page4{
+    height: 50vh;
+    width: 100%;
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:70px;
+    position: relative;
+    /* padding: 0px 20px; */
+}
+
+.elem{
+    height: 45%;
+    width: 27%;
+    overflow: hidden;
+    border-radius: 20px;
+    position: relative;
+}
+.elem h2{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #95C11E;
+    font-size: 28px;
+    color: #000;
+    transition: all ease 0.5s;
+    font-weight: 800;
+    position: absolute;
+    z-index: 10;
+}
+.elem img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    scale: 1.1;
+    transition: all ease 0.5s;
+
+}
+
+.elem:hover h2{
+    color: #fff;
+    background-color: transparent;
+}
+.elem:hover img{
+    scale: 1;
+}
+
+#page4 h1{
+    font-size: 72px;
+    position: absolute;
+    top:5%;
+    font-weight: 900;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: #000;
+    -webkit-text-stroke: 2px #fff;
+}
+#footer {
+    height: 40vh;
+    width: 100%;
+    background: linear-gradient(to left bottom, #119f3a 0%, #a3d421 80%);
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 6.5vw;
+    padding: 0 100px;
+  }
+  #footer > img {
+    position: absolute;
+    left: 0;
+    height: 100%;
+    z-index: 0;
+  }
+  #f1 img {
+    height: 90px;
+    scale: 1.1;
+  }
+  #f1 img:hover {
+
+    scale: 1;
+  }
+  #f1,
+  #f2,
+  #f3,
+  #f4 {
+    width: fit-content;
+    position: relative;
+    z-index: 99;
+    /* background-color: red; */
+  }
+  #f2 h3 {
+    font-size: 1.6vw;
+    white-space: nowrap;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 900;
+    margin-bottom: 8px;
+  }
+  
+  #f3 h3 {
+    font-size: 1.6vw;
+    white-space: nowrap;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 800;
+    margin-bottom: 8px;
+  }
+  #f4 h4 {
+    font-size: 1vw;
+    white-space: nowrap;
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 600;
+    line-height: 20px;
+    margin-bottom: 8px;
+  }
